# py-load-test

./: .Dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
testing/typescript/src/: api-simulation.gatling.ts
